--- a/test/e2e/data/infrastructure-metal3/cluster-template-ubuntu/kustomization.yaml
+++ b/test/e2e/data/infrastructure-metal3/cluster-template-ubuntu/kustomization.yaml
@@ -1,6 +1,3 @@
 resources:
-- ../bases/cluster
 - ../bases/ippool
-patchesStrategicMerge:
-  - ./controlplane-kubeadm-config.yaml
-  - ./workers-kubeadm-config.yaml
+- ../bases/ubuntu-kubeadm-config
