allow kubectl caching after cluster creation
The .kube directory must belong to the (non-root) user issuing kubectl.
Otherwise kubectl will not be able to cache requests and will issue warnings
due to client-side throttling taking place when requests normally hitting the
cache are directed at the server instead.

fix related to issue: https://github.com/metal3-io/metal3-dev-env/issues/957

--- a/test/e2e/data/infrastructure-metal3/bases/ubuntu-kubeadm-config/ubuntu-kubeadm-config.yaml
+++ b/test/e2e/data/infrastructure-metal3/bases/ubuntu-kubeadm-config/ubuntu-kubeadm-config.yaml
@@ -107,6 +107,7 @@ spec:
         name: '{{ ds.meta_data.name }}'
     postKubeadmCommands:
     - mkdir -p /home/${IMAGE_USERNAME}/.kube
+    - chown ${IMAGE_USERNAME}:${IMAGE_USERNAME} /home/${IMAGE_USERNAME}/.kube
     - cp /etc/kubernetes/admin.conf /home/${IMAGE_USERNAME}/.kube/config
     - systemctl enable --now keepalived
     - chown ${IMAGE_USERNAME}:${IMAGE_USERNAME} /home/${IMAGE_USERNAME}/.kube/config
