--- a/test/e2e/data/infrastructure-metal3/bases/centos-kubeadm-config/centos-kubeadm-config.yaml
+++ b/test/e2e/data/infrastructure-metal3/bases/centos-kubeadm-config/centos-kubeadm-config.yaml
@@ -143,6 +143,7 @@ spec:
         name: '{{ ds.meta_data.name }}'
     postKubeadmCommands:
     - mkdir -p /home/${IMAGE_USERNAME}/.kube
+    - chown ${IMAGE_USERNAME}:${IMAGE_USERNAME} /home/${IMAGE_USERNAME}/.kube
     - cp /etc/kubernetes/admin.conf /home/${IMAGE_USERNAME}/.kube/config
     - chown ${IMAGE_USERNAME}:${IMAGE_USERNAME} /home/${IMAGE_USERNAME}/.kube/config
     preKubeadmCommands:
