--- a/.golangci.yaml
+++ b/.golangci.yaml
@@ -81,6 +81,9 @@ linters-settings:
           alias: clusterv1alpha4
         - pkg: sigs.k8s.io/cluster-api/api/v1beta1
           alias: clusterv1
+        # CAPM3
+        - pkg: github.com/metal3-io/cluster-api-provider-metal3/api/v1beta1
+          alias: infrav1
   nolintlint:
     allow-unused: false
     allow-leading-space: false
