--- a/.golangci.yaml
+++ b/.golangci.yaml
@@ -84,6 +84,9 @@ linters-settings:
         # CAPM3
         - pkg: github.com/metal3-io/cluster-api-provider-metal3/api/v1beta1
           alias: infrav1
+        # BMO
+        - pkg: github.com/metal3-io/baremetal-operator/apis/metal3.io/v1alpha1
+          alias: bmov1alpha1
   nolintlint:
     allow-unused: false
     allow-leading-space: false
