--- a/.golangci.yaml
+++ b/.golangci.yaml
@@ -82,6 +82,8 @@ linters-settings:
         - pkg: sigs.k8s.io/cluster-api/api/v1beta1
           alias: clusterv1
         # CAPM3
+        - pkg: github.com/metal3-io/cluster-api-provider-metal3/api/v1alpha5
+          alias: infrav1alpha5
         - pkg: github.com/metal3-io/cluster-api-provider-metal3/api/v1beta1
           alias: infrav1
         # BMO
