--- a/config/manager/manager.yaml
+++ b/config/manager/manager.yaml
@@ -50,4 +50,6 @@ spec:
       tolerations:
         - effect: NoSchedule
           key: node-role.kubernetes.io/master
+        - effect: NoSchedule
+          key: node-role.kubernetes.io/control-plane
 
