Update template with the new providerID field

--- a/test/e2e/data/infrastructure-metal3/bases/cluster/md.yaml
+++ b/test/e2e/data/infrastructure-metal3/bases/cluster/md.yaml
@@ -111,7 +111,7 @@ spec:
             container-runtime-endpoint: unix:///var/run/crio/crio.sock
             feature-gates: AllAlpha=false
             node-labels: metal3.io/uuid={{ ds.meta_data.uuid }}
-            provider-id: metal3://{{ ds.meta_data.uuid }}
+            provider-id: ${PROVIDER_ID_FORMAT}
             runtime-request-timeout: 5m
           name: '{{ ds.meta_data.name }}'
       users:
