Verify that the new providerID format is working.
Note: If tests pass the content from this commit should be amended on top
the backporting commit(s)

--- a/templates/test/cluster-template-prow-ha-centos.yaml
+++ b/templates/test/cluster-template-prow-ha-centos.yaml
@@ -79,7 +79,7 @@ spec:
           container-runtime-endpoint: unix:///var/run/crio/crio.sock
           feature-gates: AllAlpha=false
           node-labels: metal3.io/uuid={{ ds.meta_data.uuid }}
-          provider-id: metal3://{{ ds.meta_data.uuid }}
+          provider-id: metal3://{{ ds.meta_data.providerid }}
           runtime-request-timeout: 5m
         name: '{{ ds.meta_data.name }}'
     initConfiguration:
@@ -90,7 +90,7 @@ spec:
           container-runtime-endpoint: unix:///var/run/crio/crio.sock
           feature-gates: AllAlpha=false
           node-labels: metal3.io/uuid={{ ds.meta_data.uuid }}
-          provider-id: metal3://{{ ds.meta_data.uuid }}
+          provider-id: metal3://{{ ds.meta_data.providerid }}
           runtime-request-timeout: 5m
         name: '{{ ds.meta_data.name }}'
     files:
@@ -461,7 +461,7 @@ spec:
             container-runtime-endpoint: unix:///var/run/crio/crio.sock
             feature-gates: AllAlpha=false
             node-labels: metal3.io/uuid={{ ds.meta_data.uuid }}
-            provider-id: metal3://{{ ds.meta_data.uuid }}
+            provider-id: metal3://{{ ds.meta_data.providerid }}
             runtime-request-timeout: 5m
           name: '{{ ds.meta_data.name }}'
       preKubeadmCommands:
