--- a/templates/test/cluster-template-prow-ha.yaml
+++ b/templates/test/cluster-template-prow-ha.yaml
@@ -154,7 +154,7 @@ spec:
           container-runtime-endpoint: unix:///var/run/crio/crio.sock
           feature-gates: AllAlpha=false
           node-labels: metal3.io/uuid={{ ds.meta_data.uuid }}
-          provider-id: metal3://{{ ds.meta_data.uuid }}
+          provider-id: metal3://{{ ds.meta_data.providerid }}
           runtime-request-timeout: 5m
         name: '{{ ds.meta_data.name }}'
     joinConfiguration:
@@ -166,7 +166,7 @@ spec:
           container-runtime-endpoint: unix:///var/run/crio/crio.sock
           feature-gates: AllAlpha=false
           node-labels: metal3.io/uuid={{ ds.meta_data.uuid }}
-          provider-id: metal3://{{ ds.meta_data.uuid }}
+          provider-id: metal3://{{ ds.meta_data.providerid }}
           runtime-request-timeout: 5m
         name: '{{ ds.meta_data.name }}'
     postKubeadmCommands:
@@ -386,7 +386,7 @@ spec:
             container-runtime-endpoint: unix:///var/run/crio/crio.sock
             feature-gates: AllAlpha=false
             node-labels: metal3.io/uuid={{ ds.meta_data.uuid }}
-            provider-id: metal3://{{ ds.meta_data.uuid }}
+            provider-id: metal3://{{ ds.meta_data.providerid }}
             runtime-request-timeout: 5m
           name: '{{ ds.meta_data.name }}'
       preKubeadmCommands:
