apply the same validation for m3m and m3mt
Fixes a few linter complaints as well.

--- a/config/crd/bases/infrastructure.cluster.x-k8s.io_metal3machinetemplates.yaml
+++ b/config/crd/bases/infrastructure.cluster.x-k8s.io_metal3machinetemplates.yaml
@@ -373,7 +373,7 @@ spec:
                             - sha512
                             type: string
                           format:
-                            description: DiskFormat contains the image disk format
+                            description: DiskFormat contains the image disk format.
                             enum:
                             - raw
                             - qcow2
