--- a/config/crd/bases/infrastructure.cluster.x-k8s.io_metal3machinetemplates.yaml
+++ b/config/crd/bases/infrastructure.cluster.x-k8s.io_metal3machinetemplates.yaml
@@ -368,7 +368,7 @@ spec:
                             - sha512
                             type: string
                           format:
-                            description: DiskFormat contains the image disk format
+                            description: DiskFormat contains the image disk format.
                             enum:
                             - raw
                             - qcow2
